fix(docs-infra): make it easier to interact with notification on smaller screens
On smaller screens, the action button in `NotificationComponent` is
hidden (due to limited horizontal screen "real estate"). Thus, the only
way to perform the action is to click on the notification message, which
is typically a link.

Previously, the link inside the notification did not take up the whole
height of the notification bar. As a result, clicking outside the link
would dismiss the notification without following the link.

This commit makes it easier to interact with the notification (esp. on
smaller screens) by ensuring the link covers the whole notification bar
(width and height).

--- a/aio/src/styles/2-modules/notification/_notification.scss
+++ b/aio/src/styles/2-modules/notification/_notification.scss
@@ -12,7 +12,6 @@ $notificationHeight: 56px;
 aio-notification {
   display: flex;
   position: relative;
-  align-items: center;
   width: 100%;
   height: $notificationHeight;
   justify-content: center;
@@ -23,20 +22,21 @@ aio-notification {
   }
 
   .close-button {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: $notificationHeight;
     height: $notificationHeight;
   }
 
   .content {
-    max-width: calc(100% - #{$notificationHeight});
+    width: calc(100% - #{$notificationHeight});
     text-transform: none;
     padding: 0;
 
     > * {
+      align-items: center;
       display: flex;
+      height: 100%;
+      justify-content: center;
+      width: 100%;
     }
 
     .icon {
